# axum-htmx-chatroom

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
migrations/: 20230819175604_user_tables.sql  20230823143608_chat_tables.sql  20230827061905_add_user_chat_room_table.sql  20230827062453_add_chat_room_image_field.sql
secrets_validator/: Cargo.toml
secrets_validator/src/: lib.rs
src/: invite_users_view.rs  login_view.rs  main.rs  new_room_view.rs  utils.rs
src/manager/: chat_manager.rs  login_manager.rs  mod.rs  session_manager.rs  user_manager.rs
src/manager/fixtures/: sessions.sql  users.sql
templates/: base.html  chat.html  index.html  invite_user.html  invite_user_results.html  login.html  new_chat.html  new_room.html  new_room_results.html  placeholder.html  redirect.html  register.html  user_list.html  widget_register.html
templates/login_view/: login_attempt.html  widget_login.html  widget_register.html
