[package]
name = "live-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0"}
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["ws"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
futures = "0.3.28"
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
