[package]
name = "live-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0"}
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["ws", "multipart"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
futures = "0.3.28"
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version="0.4.3" , features = ["fs"]}
uuid = { version= "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics",]}
sqlx = { version = "0.7", features = [ "runtime-tokio" , "macros", "sqlite", "migrate", "chrono"] }
dotenvy = "0.15.7"
anyhow = "1.0.75"
secrets_validator = { path = "secrets_validator"}


[profile.dev.package.sqlx-macros]
opt-level = 3


